syntax = "proto3";
option csharp_namespace = "AuthService";
service Auth{
    rpc SignIn(LogPass) returns (Token);
    rpc SignUp(FullUserInfo) returns (FullUserInfo);
}
message Res{
    bool status =1;    
}
message LogPass{
    string login = 1;
    string password = 2;
}
message Token{
    string jwt = 1;
}
message FullUserInfo{
    string phone = 1;
    int32 age = 2;
    string email =3;
    string role =4;
    string name =5;
    LogPass log_passwords = 6;
}
       